--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "grunt-eslint": "^10.0.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": ">=0.4.5"
   },
   "keywords": [
     "gruntplugin",
